--- a/src/app/base-layout/base-layout/base-layout.component.html
+++ b/src/app/base-layout/base-layout/base-layout.component.html
@@ -2,10 +2,8 @@
   <app-nav></app-nav>
 
   <main>
-    <div>
-      <div>
+    <div class="page-container">
         <router-outlet></router-outlet>
-      </div>
     </div>
   </main>
 
