--- a/src/app/base-layout/nav/nav.component.html
+++ b/src/app/base-layout/nav/nav.component.html
@@ -16,15 +16,18 @@
       <ul
         class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0">
         <li><a routerLink="/" routerLinkActive="active" class="block py-1 px-2 uppercase tracking-wide">Home</a></li>
+        
         <li><a routerLink="/about" routerLinkActive="active" class="block py-1 px-2 uppercase tracking-wide">About</a></li>
         <li><a routerLink="/contact" routerLinkActive="active" class="block py-1 px-2 uppercase tracking-wide">Contact</a></li>
-        
+        <li *ngIf="isSignedIn">
+          <a routerLink="/service-repair">Service Repair</a>
+        </li>
 
         <li [ngClass]="{'hidden': isSignedIn, 'm-0': isSignedIn}">
           <a *ngIf="!isSignedIn" routerLink="/registration" class="block py-1 px-2 uppercase tracking-wide">Register</a>
         </li>
         <li [ngClass]="{'hidden': isSignedIn, 'm-0': isSignedIn}">
-          <a *ngIf="!isSignedIn" routerLink="/security/login" class="block py-1 px-2 uppercase tracking-wide">Log In</a>
+          <a *ngIf="!isSignedIn" routerLink="/signin" class="block py-1 px-2 uppercase tracking-wide">Log In</a>
         </li>
 
         <li *ngIf="isSignedIn" class="logged-in-menu relative">
@@ -39,7 +42,13 @@
             *ngIf="dropdownVisible" 
             class="absolute md:right-0 mt-4 w-48 rounded-b-lg">
             <li>
-              <a routerLink="/tasks" class="block w-full text-left py-2 px-4">Employee List</a>
+              <a routerLink="/employee-list" class="block w-full text-left py-2 px-4">Employee List</a>
+            </li>
+            <li>
+              <a routerLink="/employee-list" class="block w-full text-left py-2 px-4">Employee List</a>
+            </li>
+            <li>
+              <a routerLink="/employee-list" class="block w-full text-left py-2 px-4">Employee List</a>
             </li>
             <li>
               <a (click)="signOut()" class="block w-full text-left py-2 px-4">Sign Out</a>
